tests/snapshots/assets__check_file@unit-code-func-call-flavor.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/func-call-flavor.typ
snapshot_kind: text
---
#table(
  stroke: none,
  [arg1],
  [arg2]
)
