tests/snapshots/assets__check_file@unit-code-func-call-flavor.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/func-call-flavor.typ
---
#table(stroke: none,
  [arg1],
  [arg2])
