tests/snapshots/assets__check_file@unit-code-func-call-flavor.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/func-call-flavor.typ
snapshot_kind: text
---
#table(
  stroke: none,
  [arg1],
  [arg2]
)
